some spacing fix's

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ h2 {
     border-radius: 25px;
     height: 40px;
     min-width: 125px;
-    padding: 0 20px;
+    padding: 0 10px;
     font-size: larger;
     font-weight: bold;
     letter-spacing: 2px;
@@ -215,6 +215,7 @@ h2 {
 #projects-head h2{
     color: #57c785;
     letter-spacing: 3px;
+    margin: 0px 0px 40px 0px;
 }
 
 #projects {
@@ -538,7 +539,7 @@ input:focus {
     }
 
     .skill {
-        width: 160px;
+        width: 150px;
         margin: 5px;
     }
 
